# fun

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env  requirements.txt  setup.cfg
fun/: Dockerfile  app.py  envs.sh.base  requirements.txt  test.json
fun/project1/: crawler.py  endpoints.py  main.py
fun/project2/: crawl_robots.py  spiders.py
fun/shared/: models.py  settings.py
fun/static/loading/src/: loadingoverlay.min.js
fun/task501/: relevant.py  search_engines.py
fun/task601/: main.py
fun/templates/: base.html  navbar.html
fun/templates/elasticsearch/: index.html
fun/templates/project1/: choose_interesting.html  index.html  list_interesting.html
fun/templates/task501/: index.html  results.html
nginx/: Dockerfile
nginx/sites-enabled/: fun
project1/: Dockerfile  crawler.py  ip_changer.py  main.py  models.py  settings.py
project2/: spiders.py
shared/: models.py  settings.py
