[metadata]
name = fun
version = 0.0.1

[files]
packages =
	shared
	project1
	project2

[entry_points]
console_scripts =
	search_engine = project1.main:main
	crawl_links = project2.spiders:crawl_links
	crawl_robots = project2.crawl_robots:crawl_robots
	find_interesting = project2.crawl_robots:find_interesting